use org.javamodularity.moduleplugin